updated index.html & css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Aqeeb Imtiaz Harun</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">Fresh graduate in Software Engineering and a Web developer with an obsession to learn & experiment!</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+          <a href="#about" class="btn btn-primary js-scroll-trigger">About</a>
         </div>
       </div>
     </header>
@@ -65,9 +65,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <h2 class="text-white mb-4">About me</h2>
+            <p class="text-white-50">For more visit my main portfolio website built using Laravel and Vue.js
+              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">the preview page</a>.</p>
           </div>
         </div>
         <img src="img/ipad.png" class="img-fluid" alt="">
@@ -77,6 +77,8 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
+        <h2 class="text-center text-black-50">Projects</h2>
+      </br>
 
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -137,12 +139,13 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+            <!--
             <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
             <form class="form-inline d-flex">
               <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
               <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-            </form>
+            </form>-->
 
           </div>
         </div>
@@ -193,10 +196,16 @@
 
         <div class="social d-flex justify-content-center">
           <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-gitlab"></i>
           </a>
           <a href="#" class="mx-2">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-messenger"></i>
+          </a>
+          <a href="#" class="mx-2">
+            <i class="fab fa-skype"></i>
+          </a>
+          <a href="#" class="mx-2">
+            <i class="fab fa-linkedin"></i>
           </a>
           <a href="#" class="mx-2">
             <i class="fab fa-github"></i>
