added portfolio website link

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
-            <p class="text-white-50">For more visit my main portfolio website built using Laravel and Vue.js
-              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">the preview page</a>.</p>
+            <p class="text-white-50">For more visit my 
+              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">main portfolio websitethe preview page</a> built using Laravel and Vue.js.</p>
+              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-primary js-scroll-trigger">Portfolio Website</a>
           </div>
         </div>
         <img src="img/ipad.png" class="img-fluid" alt="">
