--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
-            <p class="text-white-50">For more visit my 
-              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">main portfolio websitethe preview page</a> built using Laravel and Vue.js.</p>
+            <p class="text-white-50">I am a fresh graduate in Software Engineering from Multimedia University, Cyberjaya, Malaysia with about 6 months of experience in developing Cross-platform applications using HTML, CSS, JS, Laravel, VueJs. For more visit my main portfolio websitethe preview page built using Laravel and Vue.js or
+              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a></p>
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-primary js-scroll-trigger">Portfolio Website</a>
           </div>
         </div>
@@ -196,19 +196,19 @@
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
+          <a href="https://gitlab.com/aqeebimtiaz" class="mx-2">
             <i class="fab fa-gitlab"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.m.me/aqeeb01" class="mx-2">
             <i class="fab fa-facebook-messenger"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="skype:aqeeb.imtiaz.harun" class="mx-2">
             <i class="fab fa-skype"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.linkedin.com/in/aqeeb-imtiaz-harun/" class="mx-2">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://github.com/aqeebimtiaz" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
         </div>
