added description for featured project

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>To-do List Website</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <p class="text-black-50 mb-0">A basic to-do app, built from scratch using Laravel & Bootstrap with authentications where the registered users can add and delete tasks.</p>
             </div>
           </div>
         </div>
