updated Project section

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/projects/basic_tasks_app.JPG" alt="">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/projects/aqeeb_cool_blog.JPG" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>To-do List Website</h4>
-              <p class="text-black-50 mb-0">A basic to-do app, built from scratch using Laravel & Bootstrap with authentications where the registered users can add and delete tasks.</p>
+              <h4>Personal Blog Site</h4>
+              <p class="text-black-50 mb-0"></p>
             </div>
           </div>
         </div>
@@ -103,8 +103,8 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <h4 class="text-white">To-do List Website</h4>
+                  <p class="mb-0 text-white-50">A basic to-do app, built from scratch using Laravel & Bootstrap with authentications where the registered users can add and delete tasks.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
