updated the blog portion of the webpage.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Personal Blog Site</h4>
-              <p class="text-black-50 mb-0"></p>
+              <p class="text-black-50 mb-0">This personal blog site was developed while learning Laravel with user authentications. I plan to implement user verifications through email and if possible use email links to login rather than plain old passwords.</p>
             </div>
           </div>
         </div>
