--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+            <h2 class="text-white mb-5">For more please visit: <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">Portfolio Website</a>.</h2>
             <!--
             <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
