added download CV section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="http://aqeeb-imtiaz-harun.herokuapp.com/resume">Download CV</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -66,7 +69,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
-            <p class="text-white-50">I am a fresh graduate in Software Engineering from Multimedia University, Cyberjaya, Malaysia with about 6 months of experience in developing Cross-platform applications using HTML, CSS, JS, Laravel, VueJs. For more visit my main portfolio websitethe preview page built using Laravel and Vue.js or
+            <p class="text-white-50">I am a fresh graduate in Software Engineering from Multimedia University, Cyberjaya, Malaysia with about 6 months of experience in developing Cross-platform applications using HTML, CSS, JS, Laravel, VueJs. For more visit my main portfolio website built using Laravel and Vue.js or
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a></p>
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-primary js-scroll-trigger">Portfolio Website</a>
           </div>
@@ -140,7 +143,7 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">For more please visit: <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">Portfolio Website</a>.</h2>
+            <h2 class="text-white mb-5">For more please visit my <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">Portfolio Website</a>.</h2>
             <!--
             <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
