changed about section, added buttons

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Aqeeb Imtiaz Harun</h1>
           <h2 class="text-white-50 mx-auto mt-2 mb-5">Fresh graduate in Software Engineering and a Web developer with an obsession to learn & experiment!</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">About</a>
+          <a href="#about" class="btn btn-primary js-scroll-trigger"><i class="fas fa-angle-down"></i> About</a>
         </div>
       </div>
     </header>
@@ -71,10 +71,15 @@
             <h2 class="text-white mb-4">About me</h2>
             <p class="text-white-50">I am a fresh graduate in Software Engineering from Multimedia University, Cyberjaya, Malaysia with about 6 months of experience in developing Cross-platform applications using HTML, CSS, JS, Laravel, VueJs. For more visit my main portfolio website built using Laravel and Vue.js or
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a></p>
-              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-primary js-scroll-trigger">Portfolio Website</a>
+              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-secondary js-scroll-trigger">Portfolio Website</a>
           </div>
         </div>
-        <img src="img/ipad.png" class="img-fluid" alt="">
+        
+        <br>
+
+        <a href="#projects" class="btn btn-primary js-scroll-trigger"><i class="fas fa-angle-down"></i> Projects</a>
+
+        <!--<img src="img/ipad.png" class="img-fluid" alt="">-->
       </div>
     </section>
 
