update intro & about me section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Aqeeb Imtiaz Harun</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Fresh graduate in Software Engineering and a Web developer with an obsession to learn & experiment!</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">Software Engineer and Web developer with an obsession to constantly learn & experiment!</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger"><i class="fas fa-angle-down"></i> About</a>
         </div>
       </div>
@@ -69,7 +69,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
-            <p class="text-white-50">I am a fresh graduate in Software Engineering from Multimedia University, Cyberjaya, Malaysia with about 6 months of experience in developing Cross-platform applications using HTML, CSS, JS, Laravel, VueJs. For more visit my main portfolio website built using Laravel and Vue.js or
+            <p class="text-white-50">Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 1 year of professional experience in developing ERP & Cross-platform applications using HTML, CSS, JS, Laravel, VueJs, Python, Odoo. <br>
+            Currently, I'm working at <a href="http://www.bayemporium-bd.com/"> Bay Emporium Ltd.</a> as Jr. Software Engineer on <a href="https://www.amarbay.com/">E-commerce, ERP software</a> & a (possible) React Native mobile app built on Odoo 10. For more visit my main portfolio website built using Laravel and Vue.js or
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a></p>
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-secondary js-scroll-trigger">Portfolio Website</a>
           </div>
