update about me & download CV link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="http://aqeeb-imtiaz-harun.herokuapp.com/resume">Download CV</a>
+              <a class="nav-link js-scroll-trigger" href="https://gitlab.com/aqeebimtiaz/aqeeb-imtiaz-harun/-/raw/master/public/CV_Aqeeb_Imtiaz_Harun.pdf" download="CV_Aqeeb_Imtiaz_Harun.pdf">Download CV</a>
+              <!-- <a class="nav-link js-scroll-trigger" href="http://aqeeb-imtiaz-harun.herokuapp.com/resume">Download CV</a> -->
             </li>
           </ul>
         </div>
@@ -76,11 +77,10 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
             <p class="text-white-50" style="margin-bottom: 1rem;">
-              Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 1 year of professional experience in developing ERP & Cross-platform applications using HTML, CSS, JS, Laravel, VueJs, Python, Odoo.
+              Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 1.5+ years of professional experience in developing ERP & Cross-platform applications using Laravel, Python, Django, Flask, Odoo,   React Native.
             </p>
             <p class="text-white-50">
-              Currently, I'm working at <a href="http://www.bayemporium-bd.com/"> Bay Emporium Ltd.</a> as Jr. Software Engineer on <a href="https://www.amarbay.com/">E-commerce, ERP software</a> & a (possible) React Native mobile app built on Odoo 10. For more visit my main portfolio website built using Laravel and Vue.js or
-                <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a>
+              Currently, I'm working at <a href="http://www.bayemporium-bd.com/">Bay Emporium Ltd.</a> as Software Engineer on <a href="https://www.amarbay.com/">E-commerce & ERP software</a> built on Odoo 10 & a React Native mobile app. For more visit my main portfolio website built using Laravel and Vue.js or <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a>
             </p>
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-secondary js-scroll-trigger">Portfolio Website</a>
           </div>
