--- a/index.html
+++ b/index.html
@@ -250,6 +250,27 @@
       </div>
     </footer>
 
+    <!-- Facebook Page -->
+    <div class="fb-customerchat" page_id="142899455877411" minimized="true"></div>
+
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          appId: '912333495590130',
+          autoLogAppEvents: true,
+          xfbml: true,
+          version: 'v2.11'
+        });
+      };
+      (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) { return; }
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <!-- Bootstrap core JavaScript -->
     <script defer src="vendor/jquery/jquery.min.js"></script>
     <script defer src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
