--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                 <h4 class="text-uppercase m-0">Address</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">G-4, Zakir Hossain Road, Mohammadpur, Dhaka-1207, Bangladesh</div>
+                <div class="small text-black-50">Zakir Hossain Road, Mohammadpur, Dhaka-1207, Bangladesh</div>
               </div>
             </div>
           </div>
