[ADD] About Me section & Email part with Copy button

--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
             <p class="text-white-50" style="margin-bottom: 1rem;">
-              Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 1.5+ years of professional experience in developing ERP & Cross-platform applications using Laravel, Python, Django, Flask, Odoo,   React Native.
+              Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 2.5+ years of professional experience in developing ERP & Cross-platform applications using Python, Django, Flask, Odoo, React & React Native.
+            </p>
+            <p class="text-white-50" style="margin-bottom: 1rem;">
+              Currently, I'm working at <a href="https://www.bistasolutions.com">Bista Solutions Inc.</a> as Software Engineer - Odoo to build customized ERP solutions (Sales, Purchase, Manufaturing, Inventory & E-commerce) as well as APIs based on Odoo 11-15.
             </p>
             <p class="text-white-50">
-              Currently, I'm working at <a href="http://www.bayemporium-bd.com/">Bay Emporium Ltd.</a> as Software Engineer on <a href="https://www.amarbay.com/">E-commerce & ERP software</a> built on Odoo 10 & a React Native mobile app. For more visit my main portfolio website built using Laravel and Vue.js or <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a>
+              Previously, I was working at <a href="http://www.bayemporium-bd.com/">Bay Emporium Ltd.</a> as Software Engineer on <a href="https://www.amarbay.com/">E-commerce & ERP software</a> built on Odoo 10 & 13, a React website (sales dashboard) and a React Native mobile app. For more visit my main portfolio website built using Laravel and Vue.js or <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a>
             </p>
               <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-secondary js-scroll-trigger">Portfolio Website</a>
           </div>
@@ -204,7 +207,8 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">aqeebimtiaz@gmail.com</a>
+                  <a href="mailto:aqeebimtiaz@gmail.com">aqeebimtiaz@gmail.com</a>
+                  <i id="copyEmail" class="far fa-copy"></i>
                 </div>
               </div>
             </div>
