--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Aqeeb Imtiaz Harun</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Software Engineer and Web developer with an obsession to constantly learn & experiment!</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">Odoo and Web developer with an obsession to constantly learn & experiment!</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger"><i class="fas fa-angle-down"></i> About</a>
         </div>
       </div>
@@ -101,20 +101,20 @@
     <section id="projects" class="projects-section bg-light">
       <div class="container">
         <h2 class="text-center text-black-50">Projects</h2>
-      </br>
+        <br />
 
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <a href="img/projects/aqeeb_cool_blog.JPG" class="progressive replace">
-              <img src="img/projects/aqeeb_cool_blog_preview.JPG" class="img-fluid mb-3 mb-lg-0 preview" alt="project1" />
+            <a href="img/projects/OdooLauncher-Electron.gif" class="progressive replace">
+              <img src="img/projects/basic_tasks_app_preview.JPG" class="img-fluid mb-3 mb-lg-0 preview" alt="project1" />
             </a>
             <!-- <img loading="lazy" class="img-fluid mb-3 mb-lg-0" src="img/projects/aqeeb_cool_blog.JPG" alt=""> -->
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Personal Blog Site</h4>
-              <p class="text-black-50 mb-0">This personal blog site was developed while learning Laravel with user authentications. I plan to implement user verifications through email and if possible use email links to login rather than plain old passwords.</p>
+              <h4>OdooLauncher by Electron & React</h4>
+              <p class="text-black-50 mb-0">A desktop application built to launch Odoo instances in Terminal. This project was inspired to make my daily Odoo development tasks easier.</p>
             </div>
           </div>
         </div>
@@ -141,23 +141,24 @@
         </div>
 
         <!-- Project Two Row -->
-        <!--
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+            <a href="img/projects/aqeeb_cool_blog.JPG" class="progressive replace">
+              <img src="img/projects/aqeeb_cool_blog_preview.JPG" class="img-fluid mb-3 mb-lg-0 preview" alt="project3" />
+            </a>
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <h4 class="text-white">Personal Blog Site</h4>
+                  <p class="mb-0 text-white-50">This personal blog site was developed while learning Laravel with user authentications. I plan to implement user verifications through email and if possible use email links to login rather than plain old passwords.</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
             </div>
           </div>
-        </div>-->
+        </div>
 
       </div>
     </section>
