--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
             <a href="img/projects/OdooLauncher-Electron_reduced.gif" class="progressive replace">
-              <img src="img/projects/basic_tasks_app_preview.JPG" class="img-fluid mb-3 mb-lg-0 preview" alt="project1" />
+              <img src="img/projects/OdooLauncher-Electron_preview.png" class="img-fluid mb-3 mb-lg-0 preview" alt="project1" />
             </a>
             <!-- <img loading="lazy" class="img-fluid mb-3 mb-lg-0" src="img/projects/aqeeb_cool_blog.JPG" alt=""> -->
           </div>
