--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
@@ -274,7 +275,7 @@
                 <hr class="my-4">
                 <div class="small text-black-50">
                   <a href="mailto:aqeebimtiaz@gmail.com">aqeebimtiaz@gmail.com</a>
-                  <i id="copyEmail" class="far fa-copy"></i>
+                  <i id="copyEmail" class="far fa-copy" data-bs-toggle="popover" data-bs-content="Copied!"></i>
                 </div>
               </div>
             </div>
@@ -321,14 +322,16 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script defer src="vendor/jquery/jquery.min.js"></script>
-    <script defer src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script defer src="vendor/jquery/jquery.min.js"></script>
+    <script defer src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
     <!-- Plugin JavaScript -->
-    <script defer src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- <script defer src="vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
     <!-- Custom scripts for this template -->
-    <script defer src="js/grayscale.min.js"></script>
+    <!-- <script defer src="js/grayscale.min.js"></script> -->
+    <script defer src="js/scripts.js"></script>
 
     <!--Progressive Image Loading-->
     <script defer src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script>
