--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
     <!-- Custom scripts for this template -->
     <!-- <script defer src="js/grayscale.min.js"></script> -->
-    <script defer src="js/scripts.js"></script>
+    <script defer src="js/scripts.min.js"></script>
 
     <!--Progressive Image Loading-->
     <script defer src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script>
