--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Aqeeb Imtiaz Harun</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button"
+                data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
         </button>
@@ -236,6 +238,7 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+            <!-- TODO: Change Portfolio Site Address -->
             <h2 class="text-white mb-5">For more please visit my <a href="http://aqeeb-imtiaz-harun.herokuapp.com/">Portfolio Website</a>.</h2>
             <!--
             <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
