--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Primary Meta Tags -->
+    <title>Aqeeb Imtiaz Harun</title>
+    <meta name="title" content="Aqeeb Imtiaz Harun">
     <meta name="description" content="Portfolio website of Aqeeb Imtiaz Harun">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Aqeeb Imtiaz Harun">
 
-    <title>Aqeeb Imtiaz Harun</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://aqeebimtiaz.github.io/">
+    <meta property="og:title" content="Aqeeb Imtiaz Harun">
+    <meta property="og:description" content="Portfolio website of Aqeeb Imtiaz Harun">
+    <meta property="og:image" content="/img/aqeeb/main_photo-min.jpg">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://aqeebimtiaz.github.io/">
+    <meta property="twitter:title" content="Aqeeb Imtiaz Harun">
+    <meta property="twitter:description" content="Portfolio website of Aqeeb Imtiaz Harun">
+    <meta property="twitter:image" content="">
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
