--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         object-fit: cover;
       }
     </style>
+
+    <!-- replace x.x.x with actual version -->
+    <script defer src="https://unpkg.com/@codersrank/summary@0.9.13/codersrank-summary.min.js"></script>
   </head>
 
   <body id="page-top">
@@ -134,6 +137,8 @@
     <!-- About Section -->
     <section id="about" class="about-section text-center">
       <div class="container">
+        <codersrank-summary username="aqeebimtiaz"></codersrank-summary>
+
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
