--- a/index.html
+++ b/index.html
@@ -320,19 +320,22 @@
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="https://github.com/aqeebimtiaz" class="mx-2">
+          <a href="https://www.github.com/aqeebimtiaz" class="mx-2" target="_blank" aria-label="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.m.me/aqeeb01" class="mx-2">
+          <a href="https://www.twitter.com/aqeebimtiaz" class="mx-2" target="_blank" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.m.me/aqeeb01" class="mx-2" target="_blank" aria-label="Messenger">
             <i class="fab fa-facebook-messenger"></i>
           </a>
-          <a href="skype:aqeeb.imtiaz.harun" class="mx-2">
+          <a href="skype:aqeeb.imtiaz.harun" class="mx-2" target="_blank" aria-label="Skype">
             <i class="fab fa-skype"></i>
           </a>
-          <a href="https://www.linkedin.com/in/aqeeb-imtiaz-harun/" class="mx-2">
+          <a href="https://www.linkedin.com/in/aqeeb-imtiaz-harun/" class="mx-2" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://gitlab.com/aqeebimtiaz" class="mx-2">
+          <a href="https://gitlab.com/aqeebimtiaz" class="mx-2" target="_blank" aria-label="GitLab">
             <i class="fab fa-gitlab"></i>
           </a>
         </div>
