--- a/index.html
+++ b/index.html
@@ -143,15 +143,16 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">About me</h2>
             <p class="text-white-50" style="margin-bottom: 1rem;">
-              Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 2.5+ years of professional experience in developing ERP & Cross-platform applications using Python, Django, Flask, Odoo, React & React Native.
+              Graduate in Software Engineering from <a href="https://www.mmu.edu.my/fci/">Faculty of Computing & Informatics, Multimedia University, Cyberjaya, Malaysia</a> with about 4.5+ years of professional experience in developing ERP & Cross-platform applications using Python, Django, Flask, Odoo, React & React Native.
             </p>
             <p class="text-white-50" style="margin-bottom: 1rem;">
-              Currently, I'm working at <a href="https://www.bistasolutions.com">Bista Solutions Inc.</a> as Software Engineer - Odoo to build customized ERP solutions (Sales, Purchase, Manufaturing, Inventory & E-commerce) as well as APIs based on Odoo 11-15.
+              Currently, I'm working at <a href="https://www.bistasolutions.com">Bista Solutions Inc.</a> as Software Engineer - Odoo to build customized ERP solutions (Sales, Purchase, Manufacturing, Inventory & E-commerce) as well as APIs based on Odoo 11-16.
             </p>
             <p class="text-white-50">
-              Previously, I was working at <a href="http://www.bayemporium-bd.com/">Bay Emporium Ltd.</a> as Software Engineer on <a href="https://www.amarbay.com/">E-commerce & ERP software</a> built on Odoo 10 & 13, a React website (sales dashboard) and a React Native mobile app. For more visit my main portfolio website built using Laravel and Vue.js or <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a>
+              Previously, I was working at <a href="http://www.bayemporium-bd.com/">Bay Emporium Ltd.</a> as Software Engineer on <a href="https://www.amarbay.com/">E-commerce & ERP software</a> built on Odoo 10 & 13, a React website (sales dashboard) and a React Native mobile app.
+              <!-- For more visit my main portfolio website built using Laravel and Vue.js or <a href="http://aqeeb-imtiaz-harun.herokuapp.com/resume"> download my CV.</a> -->
             </p>
-              <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-secondary js-scroll-trigger">Portfolio Website</a>
+            <!-- <a href="http://aqeeb-imtiaz-harun.herokuapp.com/" class="btn btn-secondary js-scroll-trigger">Portfolio Website</a> -->
           </div>
         </div>
 
