[MOD] Download CV link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="https://gitlab.com/aqeebimtiaz/aqeeb-imtiaz-harun/-/raw/master/public/CV_Aqeeb_Imtiaz_Harun.pdf" download="CV_Aqeeb_Imtiaz_Harun.pdf">Download CV</a>
+              <a class="nav-link js-scroll-trigger" href="https://raw.githubusercontent.com/aqeebimtiaz/aqeebimtiaz.github.io/master/CV_Aqeeb_Imtiaz_Harun.pdf" download="CV_Aqeeb_Imtiaz_Harun.pdf">Download CV</a>
               <!-- <a class="nav-link js-scroll-trigger" href="http://aqeeb-imtiaz-harun.herokuapp.com/resume">Download CV</a> -->
             </li>
           </ul>
